...
    <!-- Non translatable -->
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="stop" translatable="false">Stop</string>

    <!-- Translatable -->
    <string name="app_name">Youpidapp</string>
    <string name="home">Accueil</string>
    <string name="type">Type de lecture</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="search">Rechercher</string>

...
